--- a/index/templates/history_contents/summer/12.html
+++ b/index/templates/history_contents/summer/12.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block css_head %}
-	<link rel="stylesheet" type="text/css" href="static/history/css/LCK/12spring-12summer.css">
+	<link rel="stylesheet" type="text/css" href="static/history/css/LCK/12summer-14summer.css">
 {% endblock %}
 
 {% block history_content %}
@@ -58,12 +58,12 @@
 		
 		<table class="round16_table">
 			<colgroup>
-				<col>
 				<col style="width: 100px;">
 				<col style="width: 150px;">
+				<col style="width: 250px;">
 				<col>
 				<col>
-				<col style="width: 150px;">
+				<col style="width: 350px;">
 			</colgroup>
 			<tr>
 				<th colspan="6">A조</th>
@@ -104,12 +104,12 @@
 		</table>
 		<table class="round16_table">
 			<colgroup>
-				<col>
 				<col style="width: 100px;">
 				<col style="width: 150px;">
+				<col style="width: 250px;">
 				<col>
 				<col>
-				<col style="width: 150px;">
+				<col style="width: 350px;">
 			</colgroup>
 			<tr>
 				<th colspan="6">B조</th>
@@ -150,12 +150,12 @@
 		</table>
 		<table class="round16_table">
 			<colgroup>
-				<col>
 				<col style="width: 100px;">
 				<col style="width: 150px;">
+				<col style="width: 250px;">
 				<col>
 				<col>
-				<col style="width: 150px;">
+				<col style="width: 350px;">
 			</colgroup>
 			<tr>
 				<th colspan="6">C조</th>
@@ -196,12 +196,12 @@
 		</table>
 		<table class="round16_table">
 			<colgroup>
-				<col>
 				<col style="width: 100px;">
 				<col style="width: 150px;">
+				<col style="width: 250px;">
 				<col>
 				<col>
-				<col style="width: 150px;">
+				<col style="width: 350px;">
 			</colgroup>
 			<tr>
 				<th colspan="6">D조</th>
@@ -242,14 +242,16 @@
 		</table>
 		
 		<div class="reference">
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : 8강 진출 (1시드) &nbsp;</span>
-			</div>
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #97ECAB"></div><span class="reference_letter"> : 8강 진출 (2시드) &nbsp;</span>
-			</div>
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #ffcccc"></div><span class="reference_letter"> : 탈락 &nbsp;</span>
+			<div class="reference_border">
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : 8강 진출 (1시드) &nbsp;</span>
+				</div>
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #97ECAB"></div><span class="reference_letter"> : 8강 진출 (2시드) &nbsp;</span>
+				</div>
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #ffcccc"></div><span class="reference_letter"> : 탈락 &nbsp;</span>
+				</div>
 			</div>
 		</div>
 	</section>
