--- a/index/templates/history_contents/summer/15.html
+++ b/index/templates/history_contents/summer/15.html
@@ -176,23 +176,25 @@
 			</tr>
 		</table>
 		<div class="reference">
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #eeccee"></div><span class="reference_letter"> : 결승전 진출 &nbsp;</span>
-			</div>
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : PO 2라운드 진출 &nbsp;</span>
-			</div>
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #97ECAB"></div><span class="reference_letter"> : PO 1라운드 진출 &nbsp;</span>
-			</div>
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #ccffcc"></div><span class="reference_letter"> : 와일드카드전 진출 &nbsp;</span>
-			</div>
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #FFFF99"></div><span class="reference_letter"> : 잔류 &nbsp;</span>
-			</div>
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #ffcccc"></div><span class="reference_letter"> : 승강전 &nbsp;</span>
+			<div class="reference_border">
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #eeccee"></div><span class="reference_letter"> : 결승전 진출 &nbsp;</span>
+				</div>
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : PO 2라운드 진출 &nbsp;</span>
+				</div>
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #97ECAB"></div><span class="reference_letter"> : PO 1라운드 진출 &nbsp;</span>
+				</div>
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #ccffcc"></div><span class="reference_letter"> : 와일드카드전 진출 &nbsp;</span>
+				</div>
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #FFFF99"></div><span class="reference_letter"> : 잔류 &nbsp;</span>
+				</div>
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #ffcccc"></div><span class="reference_letter"> : 승강전 &nbsp;</span>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -367,8 +369,10 @@
 			</tr>
 		</table>
 		<div class="reference">
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : 정규시즌 MVP</span>
+			<div class="reference_border">
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : 정규시즌 MVP</span>
+				</div>
 			</div>
 		</div>
 	</section>
