--- a/index/templates/history_contents/summer/22.html
+++ b/index/templates/history_contents/summer/22.html
@@ -181,14 +181,16 @@
 			</tr>
 		</table>
 		<div class="reference">
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : PO 2라운드 진출 &nbsp;</span>
-			</div>
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #97ECAB"></div><span class="reference_letter"> : PO 1라운드 진출 &nbsp;</span>
-			</div>
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #FFFF99"></div><span class="reference_letter"> : PO 진출 실패 &nbsp;</span>
+			<div class="reference_border">
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : PO 2라운드 진출 &nbsp;</span>
+				</div>
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #97ECAB"></div><span class="reference_letter"> : PO 1라운드 진출 &nbsp;</span>
+				</div>
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #FFFF99"></div><span class="reference_letter"> : PO 진출 실패 &nbsp;</span>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -200,12 +202,12 @@
 				<div class="post_season_block" style="margin-bottom: 50px;">
 					<div class="post_season_index">PO 1라운드 1경기<br>(Bo5)</div>
 					<div class="post_season_team win">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2022spring/LSB.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/2022summer/LSB.webp' %}"></div>
 						<div class="post_season_team_name">LSB</div>
 						<div class="post_season_team_score">3</div>
 					</div>
 					<div class="post_season_team lose">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2022spring/DRX.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/2022summer/DRX.webp' %}"></div>
 						<div class="post_season_team_name">DRX</div>
 						<div class="post_season_team_score">1</div>
 					</div>
@@ -214,12 +216,12 @@
 				<div class="post_season_block">
 					<div class="post_season_index">PO 1라운드 2경기<br>(Bo5)</div>
 					<div class="post_season_team win">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2022spring/DK.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/2022summer/DK.webp' %}"></div>
 						<div class="post_season_team_name">DK</div>
 						<div class="post_season_team_score">3</div>
 					</div>
 					<div class="post_season_team lose">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2022spring/KT.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/2022summer/KT.webp' %}"></div>
 						<div class="post_season_team_name">KT</div>
 						<div class="post_season_team_score">2</div>
 					</div>
@@ -239,12 +241,12 @@
 				<div class="post_season_block" style="margin-bottom: 50px;">
 					<div class="post_season_index">PO 2라운드 1경기*<br>(Bo5)</div>
 					<div class="post_season_team win">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2022spring/GEN.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/2022summer/GEN.webp' %}"></div>
 						<div class="post_season_team_name">GEN</div>
 						<div class="post_season_team_score">3</div>
 					</div>
 					<div class="post_season_team lose">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2022spring/LSB.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/2022summer/LSB.webp' %}"></div>
 						<div class="post_season_team_name">LSB</div>
 						<div class="post_season_team_score">1</div>
 					</div>
@@ -253,12 +255,12 @@
 				<div class="post_season_block">
 					<div class="post_season_index">PO 2라운드 2경기<br>(Bo5)</div>
 					<div class="post_season_team win">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2022spring/T1.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/2022summer/T1.webp' %}"></div>
 						<div class="post_season_team_name">T1</div>
 						<div class="post_season_team_score">3</div>
 					</div>
 					<div class="post_season_team lose">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2022spring/DK.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/2022summer/DK.webp' %}"></div>
 						<div class="post_season_team_name">DK</div>
 						<div class="post_season_team_score">2</div>
 					</div>
@@ -277,20 +279,22 @@
 				<div class="post_season_block" style="margin-top: 100px;">
 					<div class="post_season_index">파이널<br>(Bo5)</div>
 					<div class="post_season_team win">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2022spring/GEN.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/2022summer/GEN.webp' %}"></div>
 						<div class="post_season_team_name">GEN</div>
 						<div class="post_season_team_score">3</div>
 					</div>
 					<div class="post_season_team lose">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/2022spring/T1.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/2022summer/T1.webp' %}"></div>
 						<div class="post_season_team_name">T1</div>
 						<div class="post_season_team_score">0</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="post_season_reference">
-			<div class="reference_element"><span style="font-weight: bolder;">PO 2라운드*</span> : GEN(정규리그 1위팀)이 LSB(정규리그 3위팀)선택</div>
+		<div class="reference">
+			<div class="reference_border">
+				<div class="reference_element reference_element_type_letter"><span style="font-weight: bolder;">PO 2라운드*</span> : GEN(정규리그 1위팀)이 LSB(정규리그 3위팀)선택</div>
+			</div>
 		</div>
 	</section>
 
@@ -309,7 +313,7 @@
 			<th>순위</th><th colspan="2">팀</th><th colspan="2">선수</th><th>포인트</th><th>포지션</th>
 			<tr>
 				<td style="background-color: #aaddff;">1</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2022spring/GEN.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/2022summer/GEN.webp' %}"></td>
 				<td>Gen.G</td>
 				<td>Ruler</td>
 				<td>박재혁</td>
@@ -318,7 +322,7 @@
 			</tr>
 			<tr>
 				<td style="background-color: #aaddff;">1</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2022spring/LSB.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/2022summer/LSB.webp' %}"></td>
 				<td>Liiv SANDBOX</td>
 				<td>Prince</td>
 				<td>이채환</td>
@@ -327,7 +331,7 @@
 			</tr>
 			<tr>
 				<td>3</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2022spring/T1.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/2022summer/T1.webp' %}"></td>
 				<td>T1</td>
 				<td>Zeus</td>
 				<td>최우제</td>
@@ -336,7 +340,7 @@
 			</tr>
 			<tr>
 				<td>4</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2022spring/KT.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/2022summer/KT.webp' %}"></td>
 				<td>kt Rolster</td>
 				<td>Aiming</td>
 				<td>김하람</td>
@@ -345,7 +349,7 @@
 			</tr>
 			<tr>
 				<td>5</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2022spring/DRX.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/2022summer/DRX.webp' %}"></td>
 				<td>DRX</td>
 				<td>Zeka</td>
 				<td>김건우</td>
@@ -354,7 +358,7 @@
 			</tr>
 			<tr>
 				<td>6</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2022spring/GEN.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/2022summer/GEN.webp' %}"></td>
 				<td>Gen.G</td>
 				<td>Peanut</td>
 				<td>한왕호</td>
@@ -363,7 +367,7 @@
 			</tr>
 			<tr>
 				<td>6</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2022spring/GEN.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/2022summer/GEN.webp' %}"></td>
 				<td>Gen.G</td>
 				<td>Chovy</td>
 				<td>정지훈</td>
@@ -372,7 +376,7 @@
 			</tr>
 			<tr>
 				<td>6</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2022spring/DK.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/2022summer/DK.webp' %}"></td>
 				<td>DWG KIA</td>
 				<td>ShowMaker</td>
 				<td>허수</td>
@@ -381,7 +385,7 @@
 			</tr>
 			<tr>
 				<td>9</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2022spring/T1.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/2022summer/T1.webp' %}"></td>
 				<td>T1</td>
 				<td>Faker</td>
 				<td>이상혁</td>
@@ -390,7 +394,7 @@
 			</tr>
 			<tr>
 				<td>9</td>
-				<td><img class="POG_team_img" src="{% static 'img/teams/2022spring/LSB.webp' %}"></td>
+				<td><img class="POG_team_img" src="{% static 'img/teams/2022summer/LSB.webp' %}"></td>
 				<td>Liiv SANDBOX</td>
 				<td>Croco</td>
 				<td>김동범</td>
@@ -399,8 +403,10 @@
 			</tr>
 		</table>
 		<div class="reference">
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : Player of the Split</span>
+			<div class="reference_border">
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : Player of the Split</span>
+				</div>
 			</div>
 		</div>
 	</section>
