--- a/index/static/history/css/style.css
+++ b/index/static/history/css/style.css
@@ -1,3 +1,133 @@
+/* reference */
+.reference {
+	font-size: 14px;
+	overflow: hidden;
+}
+
+.reference .reference_border {
+	float: right;
+	font-size: 14px;
+}
+
+.reference .reference_border .reference_element_type_color {
+	float: left;
+	margin-right: 5px;
+}
+
+.reference .reference_border .reference_element_type_color:last-child {
+	margin-right: 0;
+}
+
+.reference .reference_border .reference_element_type_color .reference_letter {
+	border-right: 1px solid #bbb;
+}
+
+.reference .reference_border .reference_element_type_color:last-child .reference_letter {
+	border-right: 0;
+}
+
+.reference .reference_border .reference_element_type_color .reference_color {
+	float: left;
+	margin: 3px;
+	width: 15px;
+	height: 15px;
+}
+
+.reference .reference_border .reference_element_type_letter {
+		
+}
+
+
+/* result_table */
+#result {
+	margin: 0 auto 50px;
+}
+
+#result #result_table {
+	margin: 0 auto;
+	width: 98%;
+	overflow: hidden;
+	text-align: center;
+	box-shadow: 0px 0px 10px gray;
+	border-radius: 10px;
+}
+
+/* winner_team */
+#result #result_table #winner_team #winner_team_index {
+	background: #1C192B;
+	color: #DCDFE0;
+	padding: 5px;
+}
+
+#result #result_table #winner_team #winner_team_content img {
+	padding-top: 10px;
+	width: 120px;
+}
+
+
+/* winner_coach */
+#result #result_table #winner_coach .coach {
+	overflow: hidden;
+}
+
+#result #result_table #winner_coach .coach .coach_index {
+	float: left;
+	background: #1C192B;
+	color: #DCDFE0;
+	width: 200px;
+	padding: 10px;
+}
+
+#result #result_table #winner_coach .coach .coach_name {
+	float: left;
+	padding: 10px;
+}
+
+/* winner_player */
+#result #result_table #winner_player {
+	display: flex;
+}
+
+#result #result_table #winner_player .winner_player {
+	flex: 1;
+}
+
+#result #result_table #winner_player .winner_player .winner_player_index {
+	background: #1C192B;
+	color: #DCDFE0;
+	text-align: center;
+	padding: 0 0 10px 0;
+}
+
+#result #result_table #winner_player .winner_player .winner_player_index img {
+	height: 40px;
+	padding: 10px 0;
+}
+
+#result #result_table #winner_player .winner_player .winner_player_name {
+	padding: 5px;
+}
+
+/* award player */
+#result #result_table #award_player {
+	display: flex;
+}
+
+#result #result_table #award_player .award_player {
+	flex: 1;
+}
+
+#result #result_table #award_player .award_player .awrd_player_index {
+	background: #1C192B;
+	color: #DCDFE0;
+	text-align: center;
+	padding: 5px 0;
+}
+
+#result #result_table #award_player .award_player .awrd_player_name {
+	padding: 5px;
+}
+
 #history_menu {
 	width: 98%;
 	margin: 50px auto;
@@ -60,7 +190,7 @@
 	border-right: 0;
 }
 
-#history_menu .menu_year a {
+#history_menu .menu_year .year a {
 	color: #AAAAAA;
 }
 
