--- a/index/templates/history_contents/spring/14.html
+++ b/index/templates/history_contents/spring/14.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block css_head %}
-	<link rel="stylesheet" type="text/css" href="static/history/css/LCK/13winter-14winter.css">
+	<link rel="stylesheet" type="text/css" href="static/history/css/LCK/12summer-14summer.css">
 {% endblock %}
 
 {% block history_content %}
@@ -288,14 +288,16 @@
 		</table>
 		
 		<div class="reference">
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : 8강 진출 (1시드) &nbsp;</span>
-			</div>
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #97ECAB"></div><span class="reference_letter"> : 8강 진출 (2시드) &nbsp;</span>
-			</div>
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #ffcccc"></div><span class="reference_letter"> : 탈락 &nbsp;</span>
+			<div class="reference_border">
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : 8강 진출 (1시드) &nbsp;</span>
+				</div>
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #97ECAB"></div><span class="reference_letter"> : 8강 진출 (2시드) &nbsp;</span>
+				</div>
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #ffcccc"></div><span class="reference_letter"> : 탈락 &nbsp;</span>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -542,8 +544,10 @@
 			</tr>
 		</table>
 		<div class="reference">
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : MVP</span>
+			<div class="reference_border">
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : MVP</span>
+				</div>
 			</div>
 		</div>
 	</section>
