--- a/index/templates/history_contents/summer/23.html
+++ b/index/templates/history_contents/summer/23.html
@@ -180,14 +180,16 @@
 			</tr>
 		</table>
 		<div class="reference">
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : PO 2라운드 진출 &nbsp;</span>
-			</div>
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #97ECAB"></div><span class="reference_letter"> : PO 1라운드 진출 &nbsp;</span>
-			</div>
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #FFFF99"></div><span class="reference_letter"> : PO 진출 실패 &nbsp;</span>
+			<div class="reference_border">
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : PO 2라운드 진출 &nbsp;</span>
+				</div>
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #97ECAB"></div><span class="reference_letter"> : PO 1라운드 진출 &nbsp;</span>
+				</div>
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #FFFF99"></div><span class="reference_letter"> : PO 진출 실패 &nbsp;</span>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -355,9 +357,11 @@
 				</div>
 			</div>
 		</div>
-		<div class="post_season_reference">
-			<div class="reference_element"><span style="font-weight: bolder;">PO 1라운드*</span> : HLE(정규리그 3위팀)이 DRX(정규리그 6위팀)선택</div>
-			<div class="reference_element"><span style="font-weight: bolder;">PO 2라운드**</span> : KT(정규리그 1위팀)이 T1(정규리그 5위팀)선택</div>
+		<div class="reference">
+			<div class="reference_border">
+				<div class="reference_element reference_element_type_letter"><span style="font-weight: bolder;">PO 1라운드*</span> : HLE(정규리그 3위팀)이 DRX(정규리그 6위팀)선택</div>
+				<div class="reference_element reference_element_type_letter"><span style="font-weight: bolder;">PO 2라운드**</span> : KT(정규리그 1위팀)이 T1(정규리그 5위팀)선택</div>
+			</div>
 		</div>
 	</section>
 
@@ -466,8 +470,10 @@
 			</tr>
 		</table>
 		<div class="reference">
-			<div class="reference_element">
-				<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : Player of the Split</span>
+			<div class="reference_border">
+				<div class="reference_element reference_element_type_color">
+					<div class="reference_color" style="background-color: #aaddff"></div><span class="reference_letter"> : Player of the Split</span>
+				</div>
 			</div>
 		</div>
 	</section>
